# PerInspector

./: CMakeLists.txt  README.md
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/display_monitor/: Makefile  cmake_install.cmake  display
cmake/display_monitor/display_autogen/: mocs_compilation.cpp
cmake/display_monitor/display_autogen/EWIEGA46WW/: moc_cpu_load_model.cpp  moc_cpu_softirq_model.cpp  moc_cpu_stat_model.cpp  moc_mem_model.cpp  moc_monitor_inter.cpp  moc_monitor_widget.cpp  moc_net_model.cpp
cmake/proto/: Makefile  cmake_install.cmake  cpu_load.grpc.pb.cc  cpu_load.grpc.pb.h  cpu_load.pb.cc  cpu_load.pb.h  cpu_softirq.grpc.pb.cc  cpu_softirq.grpc.pb.h  cpu_softirq.pb.cc  cpu_softirq.pb.h  cpu_stat.grpc.pb.cc  cpu_stat.grpc.pb.h  cpu_stat.pb.cc  cpu_stat.pb.h  mem_info.grpc.pb.cc  mem_info.grpc.pb.h  mem_info.pb.cc  mem_info.pb.h  monitor_info.pb.cc  monitor_info.pb.h  net_info.grpc.pb.cc  net_info.grpc.pb.h  net_info.pb.cc  net_info.pb.h
cmake/rpc_manager/: Makefile  cmake_install.cmake
cmake/rpc_manager/client/: Makefile  cmake_install.cmake
cmake/rpc_manager/server/: Makefile  cmake_install.cmake  server
cmake/test_monitor/: Makefile  cmake_install.cmake
cmake/test_monitor/src/: Makefile  cmake_install.cmake  monitor
display_monitor/: CMakeLists.txt  cpu_load_model.cpp  cpu_load_model.h  cpu_softirq_model.cpp  cpu_stat_model.cpp  main.cpp  mem_model.cpp  monitor_inter.cpp  monitor_inter.h  monitor_widget.cpp  monitor_widget.h  net_model.cpp
docker/scripts/: monitor_docker_into.sh  monitor_docker_run.sh
proto/: CMakeLists.txt  cpu_load.proto  cpu_softirq.proto  cpu_stat.proto  mem_info.proto  monitor_info.proto  net_info.proto
rpc_manager/client/: CMakeLists.txt  rpc_client.cpp  rpc_client.h
rpc_manager/server/: main.cpp  rpc_manager.cpp
test_monitor/include/monitor/: cpu_stat_monitor.h
test_monitor/include/utils/: read_file.h  utils.h
test_monitor/src/: CMakeLists.txt  main.cpp
test_monitor/src/monitor/: cpu_load_monitor.cpp  cpu_softirq_monitor.cpp  cpu_stat_monitor.cpp  mem_monitor.cpp  net_monitor.cpp
test_monitor/src/utils/: read_file.cpp
